Bug 176648 - Plasma crash when use cube in Compiz Fusion
Summary: Plasma crash when use cube in Compiz Fusion
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 171881 180866 189649 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-12-01 20:51 UTC by Zsolt Durvanger
Modified: 2009-04-17 17:49 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Zsolt Durvanger 2008-12-01 20:51:50 UTC
Version:            (using Devel)
Compiler:          GCC 4.3.1 
OS:                Linux
Installed from:    Compiled sources

I use KDE SVN (rev. 891334), and compiz fusion. I tried to switch to desktop 2 with the cube (Ctrl + alt + left mouse button), but I caused an instant Plasma crash. It recovered very quickly, but it's very annoying. 

The backtrace:

Application: Plasma Workspace (plasma), signal SIGABRT
[?1034h[Thread debugging using libthread_db enabled]
[Current thread is 0 (LWP 24751)]

Thread 3 (Thread 0xa9c80b90 (LWP 24760)):
#0  0xffffe430 in __kernel_vsyscall ()
#1  0xb65f8c15 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb6656862 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#3  0xb79b41f2 in ?? () from /usr/lib/libQtNetwork.so.4
#4  0xb665584e in ?? () from /usr/lib/libQtCore.so.4
#5  0xb65f5175 in start_thread () from /lib/libpthread.so.0
#6  0xb6455dce in clone () from /lib/libc.so.6

Thread 2 (Thread 0xa9467b90 (LWP 24761)):
#0  0xffffe430 in __kernel_vsyscall ()
#1  0xb65f8c15 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb6656862 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#3  0xa9da6d2f in RenderThread::run (this=0x81f2304) at /opt/kde4/sources/trunk/KDE/kdebase/workspace/plasma/wallpapers/image/renderthread.cpp:90
#4  0xb665584e in ?? () from /usr/lib/libQtCore.so.4
#5  0xb65f5175 in start_thread () from /lib/libpthread.so.0
#6  0xb6455dce in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb53f18e0 (LWP 24751)):
[KCrash Handler]
#6  0xffffe430 in __kernel_vsyscall ()
#7  0xb63b2900 in raise () from /lib/libc.so.6
#8  0xb63b4238 in abort () from /lib/libc.so.6
#9  0xb664d8c5 in qt_message_output () from /usr/lib/libQtCore.so.4
#10 0xb664d9a2 in qFatal () from /usr/lib/libQtCore.so.4
#11 0xb664d9fc in qt_assert_x () from /usr/lib/libQtCore.so.4
#12 0xa9eb979a in QList<QRectF>::operator[] (this=0x82332f8, i=2) at /usr/include/QtCore/qlist.h:395
#13 0xa9eb551e in Pager::paintInterface (this=0x8233258, painter=0xbf8de804, option=0xbf8de3c4, contentsRect=@0xbf8de0e0)
    at /opt/kde4/sources/trunk/KDE/kdebase/workspace/plasma/applets/pager/pager.cpp:962
#14 0xb7e21faa in Plasma::Applet::paint (this=0x8233258, painter=0xbf8de804, option=0xbf8de3c4, widget=0x0) at /opt/kde4/sources/trunk/KDE/kdelibs/plasma/applet.cpp:1057
#15 0xb6f89134 in ?? () from /usr/lib/libQtGui.so.4
#16 0xb6f8cb15 in ?? () from /usr/lib/libQtGui.so.4
#17 0xb6f8cf99 in QGraphicsScene::drawItems () from /usr/lib/libQtGui.so.4
#18 0xb6fa09fc in QGraphicsView::drawItems () from /usr/lib/libQtGui.so.4
#19 0xb6faa014 in QGraphicsView::paintEvent () from /usr/lib/libQtGui.so.4
#20 0xb7f92cb6 in PanelView::paintEvent (this=0x84127e0, event=0xbf8df9fc) at /opt/kde4/sources/trunk/KDE/kdebase/workspace/plasma/shells/desktop/panelview.cpp:1030
#21 0xb6a4b83b in QWidget::event () from /usr/lib/libQtGui.so.4
#22 0xb6d82dd3 in QFrame::event () from /usr/lib/libQtGui.so.4
#23 0xb6e198ff in QAbstractScrollArea::viewportEvent () from /usr/lib/libQtGui.so.4
#24 0xb6fa765f in QGraphicsView::viewportEvent () from /usr/lib/libQtGui.so.4
#25 0xb6e1bea5 in ?? () from /usr/lib/libQtGui.so.4
#26 0xb6744c3a in QCoreApplicationPrivate::sendThroughObjectEventFilters () from /usr/lib/libQtCore.so.4
#27 0xb69f380a in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#28 0xb69fb79a in QApplication::notify () from /usr/lib/libQtGui.so.4
#29 0xb7786c83 in KApplication::notify (this=0x8075838, receiver=0x8470a98, event=0xbf8df9fc) at /opt/kde4/sources/trunk/KDE/kdelibs/kdeui/kernel/kapplication.cpp:307
#30 0xb6745a61 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#31 0xb6a544ee in ?? () from /usr/lib/libQtGui.so.4
#32 0xb6a4a200 in QWidgetPrivate::drawWidget () from /usr/lib/libQtGui.so.4
#33 0xb6a4a9ad in QWidgetPrivate::paintSiblingsRecursive () from /usr/lib/libQtGui.so.4
#34 0xb6a4a8b9 in QWidgetPrivate::paintSiblingsRecursive () from /usr/lib/libQtGui.so.4
#35 0xb6a4a8b9 in QWidgetPrivate::paintSiblingsRecursive () from /usr/lib/libQtGui.so.4
#36 0xb6a4a8b9 in QWidgetPrivate::paintSiblingsRecursive () from /usr/lib/libQtGui.so.4
#37 0xb6a49e78 in QWidgetPrivate::drawWidget () from /usr/lib/libQtGui.so.4
#38 0xb6bb949e in ?? () from /usr/lib/libQtGui.so.4
#39 0xb6bb9967 in ?? () from /usr/lib/libQtGui.so.4
#40 0xb6a4b666 in QWidget::event () from /usr/lib/libQtGui.so.4
#41 0xb6d82dd3 in QFrame::event () from /usr/lib/libQtGui.so.4
#42 0xb6e1a3cd in QAbstractScrollArea::event () from /usr/lib/libQtGui.so.4
#43 0xb6fa1104 in QGraphicsView::event () from /usr/lib/libQtGui.so.4
#44 0xb7f9289c in PanelView::event (this=0x84127e0, event=0x83ef590) at /opt/kde4/sources/trunk/KDE/kdebase/workspace/plasma/shells/desktop/panelview.cpp:1052
#45 0xb69f382c in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#46 0xb69fb79a in QApplication::notify () from /usr/lib/libQtGui.so.4
#47 0xb7786c83 in KApplication::notify (this=0x8075838, receiver=0x84127e0, event=0x83ef590) at /opt/kde4/sources/trunk/KDE/kdelibs/kdeui/kernel/kapplication.cpp:307
#48 0xb6745a61 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#49 0xb67466d5 in QCoreApplicationPrivate::sendPostedEvents () from /usr/lib/libQtCore.so.4
#50 0xb67468cd in QCoreApplication::sendPostedEvents () from /usr/lib/libQtCore.so.4
#51 0xb67705af in ?? () from /usr/lib/libQtCore.so.4
#52 0xb57d22d9 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#53 0xb57d585b in ?? () from /usr/lib/libglib-2.0.so.0
#54 0xb57d59d8 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#55 0xb67701f8 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#56 0xb6a8c885 in ?? () from /usr/lib/libQtGui.so.4
#57 0xb674413a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#58 0xb67442fa in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#59 0xb6746995 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#60 0xb69f36a7 in QApplication::exec () from /usr/lib/libQtGui.so.4
#61 0xb7f8a4d1 in kdemain (argc=1, argv=0xbf8e0974) at /opt/kde4/sources/trunk/KDE/kdebase/workspace/plasma/shells/desktop/main.cpp:58
#62 0x08048766 in main (argc=) at /opt/kde4/build/trunk/KDE/kdebase/workspace/plasma/shells/desktop/plasma_qgv_dummy.cpp:3

Zsolt
Comment 1 Marco Martin 2008-12-01 23:52:19 UTC
SVN commit 891404 by mart:

be paranoid about what the number of the current desktop is
it turns out that KWindowsysten returns numbers dependent from the
window manager, starting either from 0 or 1, kwin seems to start by 1,
compiz 0, try to find out the answer

BUG:176648


 M  +8 -1      pager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=891404
Comment 2 Dario Andres 2008-12-06 02:46:23 UTC
*** Bug 171881 has been marked as a duplicate of this bug. ***
Comment 3 Dario Andres 2009-01-15 22:31:42 UTC
*** Bug 180866 has been marked as a duplicate of this bug. ***
Comment 4 Dario Andres 2009-04-17 17:49:50 UTC
*** Bug 189649 has been marked as a duplicate of this bug. ***