be paranoid about what the number of the current desktop is it turns out that KWindowsysten returns numbers dependent from the window manager, starting either from 0 or 1, kwin seems to start by 1, compiz 0, try to find out the answer

BUG:176648

svn path=/trunk/KDE/kdebase/workspace/; revision=891404